[package]
name = "batch_test"
version = "0.1.0"
authors = ["Rui Loura <rui@joyent.com>"]
edition = "2018"

[dependencies]
moray = { git = "https://github.com/joyent/rust-moray", tag="v0.10.0" }
#libmanta = { git = "https://github.com/joyent/rust-libmanta", tag="v0.7.0" , features = ["postgres"]}
libmanta = { git = "https://github.com/joyent/rust-libmanta", branch="arbitrary_i64_max" }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-bunyan = { git = "https://github.com/kellymclaughlin/bunyan", branch = "build-on-smartos" }

uuid = {version = "0.7.4", features = ["v4"] }
unicode-normalization = "=0.1.5"

#diesel = { git = "https://github.com/diesel-rs/diesel", rev = "f75e930e166eb448e3c41d5cdc7251cfcad681f6"}
#diesel_derives = { git = "https://github.com/diesel-rs/diesel" , rev = "f75e930e166eb448e3c41d5cdc7251cfcad681f6"}
quickcheck = "0.8.0"

slog-term = "2.4.0"
rand = "0.6.4"
resolve = "0.2.0"
failure = "0.1.8"
#clap = "2.33.1"
clap = "3.0.0-beta.1"
